gccida/g2/do_jump_by_parts_equality
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality/src/expr.c:10282:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // [rsp+10h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality/src/expr.c:10303:18: error: invalid suffix 'xmode' on integer constant
v11 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality/src/expr.c:10306:30: error: invalid suffix 'orce' on integer constant
v8 = operand_sub*(short *)0xforce( v4, i, ( machine_mode)v5); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality/src/expr.c:10306:45: error: use of undeclared identifier 'machine_mode'
v8 = operand_sub*(short *)0xforce( v4, i, ( machine_mode)v5); 
                                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality/src/expr.c:10306:6: error: use of undeclared identifier 'operand_sub'
v8 = operand_sub*(short *)0xforce( v4, i, ( machine_mode)v5); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality/src/expr.c:10307:30: error: invalid suffix 'orce' on integer constant
v9 = operand_sub*(short *)0xforce( v3, v7, ( machine_mode)v5); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality/src/expr.c:10307:46: error: use of undeclared identifier 'machine_mode'
v9 = operand_sub*(short *)0xforce( v3, v7, ( machine_mode)v5); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality/src/expr.c:10307:6: error: use of undeclared identifier 'operand_sub'
v9 = operand_sub*(short *)0xforce( v3, v7, ( machine_mode)v5); 
     ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality/src/obj/expr.o] Error 1
